<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_more_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chantele.homelesshelper.MoreInformation"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="13dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:text="@string/strInstructionCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/strInstructionCheck"
                android:layout_gravity="center_horizontal"/>

            <CheckBox
                android:text="@string/strDisability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/strDisability"
                android:buttonTint="@android:color/background_light"
                android:textColor="#fff"
                android:layout_marginStart="70dp" />

            <CheckBox
                android:text="@string/strVeteran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/strVeteran"
                android:textColor="@android:color/background_light"
                android:buttonTint="@android:color/background_light"
                android:layout_marginStart="70dp" />

            <CheckBox
                android:text="@string/strDomesticViolenceVictim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/strDomesticViolenceVictim"
                android:textColor="@android:color/background_light"
                android:buttonTint="@android:color/background_light"
                android:layout_marginStart="70dp" />

            <CheckBox
                android:text="@string/strPregancy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/strPregancy"
                android:textColor="@android:color/background_light"
                android:buttonTint="@android:color/background_light"
                android:layout_marginStart="70dp" />

            <TextView
                android:text="@string/txtRelationshiptoHoH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:id="@+id/txtRelationshiptoHoH"
                android:layout_gravity="center_horizontal"/>
            <Spinner
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/txtGroupRelation"
                android:entries="@array/txtGroupRelation"
                android:layout_width="148dp"
                android:background="@android:color/background_light"
                android:layout_marginStart="70dp" />

            <TextView
                android:text="@string/txtLastPermaAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtLastPermaAddress"
                android:layout_marginTop="17dp"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:layout_marginTop="14dp"
                android:id="@+id/editLastPermaStreet"
                android:background="@android:color/background_light"
                android:hint="@string/editLastPermaStreet"
                android:layout_marginStart="70dp"  />


            <EditText
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:layout_marginTop="14dp"
                android:id="@+id/editLastPermaCity"
                android:background="@android:color/background_light"
                android:hint="@string/editLastPermaCity"
                android:layout_width="150dp"
                android:layout_marginStart="70dp" />

            <EditText
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/editLastPermaState"
                android:background="@android:color/background_light"
                android:hint="@string/editLastPermaState"
                android:layout_width="60dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="14dp" />


            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_marginTop="14dp"
                android:id="@+id/editLastPermaZip"
                android:hint="@string/editLastPermaZip"
                android:layout_marginStart="70dp"
                android:background="#fff" />

            <Button
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:id="@+id/btnNextMoreInfo"
                android:background="@drawable/nextbtn"
                android:layout_marginBottom="13dp"
                android:layout_gravity="bottom|right"
                android:layout_marginTop="14dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
