<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shelter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chantele.homelesshelper.Shelter"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:text="@string/txtShelterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtShelterName"
                android:contentDescription="@string/txtShelterName"
                android:textSize="24sp"
                android:gravity="center_horizontal" />

            <TextView
                android:text="@string/txtDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:id="@+id/txtDistance"
                android:contentDescription="@string/txtDistance"
                android:textSize="18sp"
                android:gravity="center_horizontal" />

            <TextView
                android:text="@string/txtDirections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDirections"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/txtNearest" />

            <Button
                android:text="@string/btnViewMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnViewMap"
                android:layout_marginStart="130dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <Button
                android:text="@string/btnReserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnReserve"
                android:background="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"
                android:layout_marginStart="130dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
