<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chantele.homelesshelper.MainActivity"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TableRow>

                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="109dp"
                    android:layout_marginEnd="60dp"
                    app:srcCompat="@drawable/logo"
                    android:id="@+id/imgLogo"
                    android:contentDescription="@string/imgLogo"
                    android:layout_marginStart="40dp" />
            </TableRow>

            <TableRow
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_width="match_parent">

                <EditText
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/strUserFirstName"
                    android:hint="@string/strUserFirstName"
                    android:background="#fff"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="60dp" />
            </TableRow>

            <TableRow>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/strUserLastName"
                    android:hint="@string/strUserLastName"
                    android:background="#fff"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginStart="40dp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/instructForOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:id="@+id/instructForOr"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:layout_marginEnd="175dp"
                    android:layout_marginStart="160dp" />
            </TableRow>
            <TableRow>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/strUserID"
                    android:hint="@string/strUserID"
                    android:layout_marginTop="16dp"
                    android:background="#fff"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="60dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btnLogin"
                    android:background="@drawable/btn_login"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="60dp" />
            </TableRow>

            <TableRow>

                <Button
                    android:text="@string/btnNewUser"
                    android:id="@+id/btnNewUser"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:layout_height="30dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="110dp"
                    android:layout_width="60dp"
                    android:textColor="@android:color/background_light" />
            </TableRow>
            <TableRow>
                <ImageView
                    android:layout_height="60dp"
                    android:id="@+id/imgCC"
                    android:background="@drawable/copyrighttext1"
                    android:contentDescription="@string/imgCC"
                    android:layout_marginEnd="70dp"
                    android:layout_width="60dp"
                    android:layout_marginStart="60dp" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>
